// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav renders dashboard version for desktop 1`] = `
<DocumentFragment>
  <header
    class="nav__header"
  >
    <div
      class="nav__item-logo"
    >
      <a
        href="https://p5js.org"
      >
        <test-file-stub
          aria-label="p5.js Logo"
          classname="svg__logo"
          focusable="true"
          role="img"
        />
      </a>
    </div>
    <nav
      class="nav"
    >
      <ul
        class="nav__menubar"
        role="menubar"
      >
        <ul
          class="nav__items-left"
          role="group"
        >
          <li
            class="nav__item nav__item--no-icon"
          >
            <a
              class="nav__back-link"
              href="/"
            >
              <test-file-stub
                aria-hidden="true"
                classname="nav__back-icon"
                focusable="false"
              />
              <span
                class="nav__item-header"
              >
                Back to Editor
              </span>
            </a>
          </li>
        </ul>
      </ul>
    </nav>
  </header>
</DocumentFragment>
`;

exports[`Nav renders dashboard version for mobile 1`] = `
<DocumentFragment>
  .c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #333;
  cursor: pointer;
  border: none;
  line-height: 1;
}

.c4.c4.c4 svg * {
  fill: #333;
}

.c4.c4.c4:disabled {
  cursor: not-allowed;
}

.c4.c4.c4 > * + * {
  margin-left: 0.6666666666666666rem;
}

.c5 {
  width: 4rem;
}

.c5 > svg {
  width: 100%;
  height: 100%;
}

.c0 {
  background: #F0F0F0;
  color: #333;
  padding: 0.6666666666666666rem 0;
  gap: 1.1666666666666667rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.8333333333333334rem;
  box-shadow: #00000030 0px 2px 8px 0px;
  z-index: 10;
}

.c1 {
  width: 2.3333333333333335rem;
  aspect-ratio: 1;
  margin-left: 1.1666666666666667rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > svg {
  width: 100%;
  height: 100%;
}

.c1 > svg > path {
  fill: #ed225d;
  stroke: #ed225d;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.16666666666666666rem;
}

.c2 * {
  padding: 0;
  margin: 0;
}

.c2 > h5 {
  font-size: 1.0833333333333333rem;
  font-weight: normal;
}

.c3 {
  margin-left: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 ul.opened {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
  max-width: 90vw;
  max-height: 90vh;
  overflow-y: auto;
}

.c3 > div {
  position: relative;
}

.c3 > div ul {
  foreground: #000;
  background: #F0F0F0;
  border: #A6A6A6;
  position: absolute;
  overflow: hidden;
  z-index: 10;
  right: 10px;
  -webkit-transform: translateX(0.5rem);
  -ms-transform: translateX(0.5rem);
  transform: translateX(0.5rem);
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0;
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
  -webkit-transition: opacity 100ms,-webkit-transform 100ms 200ms;
  -webkit-transition: opacity 100ms,transform 100ms 200ms;
  transition: opacity 100ms,transform 100ms 200ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.16666666666666666rem;
  box-shadow: rgba(60,64,67,0.3) 0px 1px 2px 0px,rgba(60,64,67,0.15) 0px 1px 3px 1px;
  min-width: 10rem;
  border-radius: 0.16666666666666666rem;
}

.c3 > div ul li.user {
  color: #2D67F6;
  font-size: 1.3333333333333333rem;
  font-weight: bold;
  margin: 0.5rem 1rem;
}

.c3 > div ul > b {
  margin: 0.5rem 1rem;
  position: relative;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.c3 > div ul > b::after {
  content: '';
  position: absolute;
  opacity: calc(0.5);
  top: 50%;
  -webkit-transform: translate(100%,-50%);
  -ms-transform: translate(100%,-50%);
  transform: translate(100%,-50%);
  right: -0.5rem;
  width: 4.583333333333333rem;
  height: 1px;
  background-color: #4D4D4D;
}

.c3 > div ul > li {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c3 > div ul > li a,
.c3 > div ul > li button {
  width: 100%;
  padding: 0.6666666666666666rem 1.25rem 0.6666666666666666rem 0.8333333333333334rem;
  font-size: 1.5rem;
  text-align: left;
}

.c3 > div ul > li a:hover,
.c3 > div ul > li button:hover {
  background-color: #ed225d;
  color: #FFF;
}

<ul
    class="c0"
    role="menubar"
  >
    <div
      class="c1"
    >
      <test-file-stub />
    </div>
    <div
      class="c2"
    >
      <h1>
        <span
          class="editable-input editable-input--is-not-editing editable-input--has-value "
        >
          <button
            aria-hidden="false"
            aria-label="Edit sketch name"
            class="editable-input__label"
          >
            <span>
              Test project name
            </span>
            <test-file-stub
              aria-hidden="true"
              classname="editable-input__icon"
              focusable="false"
            />
          </button>
          <input
            aria-hidden="true"
            aria-label="New sketch name"
            class="editable-input__input"
            disabled=""
            maxlength="128"
            type="text"
            value="Test project name"
          />
        </span>
      </h1>
    </div>
    <div
      class="c3"
    >
      <div>
        <a
          href="/login"
        >
          <button
            class="c4 c5"
            display="inline"
            focusable="false"
            kind="primary"
            type="button"
          >
            <test-file-stub
              aria-hidden="true"
              classname="icons__StyledIcon-sc-xmer15-0 dStXqm"
              focusable="false"
            />
          </button>
        </a>
      </div>
      <div>
        <button
          class="c4 c5"
          display="inline"
          focusable="false"
          kind="primary"
          type="button"
        >
          <test-file-stub
            aria-hidden="true"
            classname="icons__StyledIcon-sc-xmer15-0 dStXqm"
            focusable="false"
          />
        </button>
        <ul
          class=""
        >
          <b>
            File
          </b>
          <li>
            <button
              aria-disabled="false"
            >
              New
            </button>
          </li>
          <li>
            <button
              aria-disabled="false"
            >
              Save
            </button>
          </li>
          <li>
            <a
              aria-disabled="false"
              href="/p5/sketches"
            >
              Examples
            </a>
          </li>
          <b>
            Edit
          </b>
          <li>
            <button
              aria-disabled="false"
            >
              Tidy Code
            </button>
          </li>
          <li>
            <button
              aria-disabled="false"
            >
              Find
            </button>
          </li>
          <b>
            Sketch
          </b>
          <li>
            <button
              aria-disabled="false"
            >
              Add File
            </button>
          </li>
          <li>
            <button
              aria-disabled="false"
            >
              Add Folder
            </button>
          </li>
          <b>
            Settings
          </b>
          <li>
            <button
              aria-disabled="false"
            >
              Preferences
            </button>
          </li>
          <li>
            <button
              aria-disabled="false"
            >
              Language
            </button>
          </li>
          <b>
            Help
          </b>
          <li>
            <button
              aria-disabled="false"
            >
              Keyboard Shortcuts
            </button>
          </li>
          <li>
            <a
              aria-disabled="false"
              href="https://p5js.org/reference/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Reference
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              href="/about"
            >
              About
            </a>
          </li>
        </ul>
      </div>
    </div>
  </ul>
</DocumentFragment>
`;

exports[`Nav renders editor version for desktop 1`] = `
<DocumentFragment>
  <header
    class="nav__header"
  >
    <div
      class="nav__item-logo"
    >
      <a
        href="https://p5js.org"
      >
        <test-file-stub
          aria-label="p5.js Logo"
          classname="svg__logo"
          focusable="true"
          role="img"
        />
      </a>
    </div>
    <nav
      class="nav"
    >
      <ul
        class="nav__menubar"
        role="menubar"
      >
        <ul
          class="nav__items-left"
          role="group"
        >
          <li
            class="nav__item"
          >
            <span
              role="menuitem"
            >
              File
            </span>
            <ul
              aria-label="File menu"
              role="menu"
            >
              <li>
                New
              </li>
              <li>
                Save
                <span
                  class="nav__keyboard-shortcut"
                >
                  Ctrl+S
                </span>
              </li>
              <li>
                Duplicate
              </li>
              <li>
                Share
              </li>
              <li>
                Download
              </li>
              <li>
                Open
              </li>
              <li>
                Add to Collection
              </li>
              <li>
                Examples
              </li>
            </ul>
          </li>
          <li
            class="nav__item"
          >
            <span
              role="menuitem"
            >
              Edit
            </span>
            <ul
              aria-label="Edit menu"
              role="menu"
            >
              <li>
                Tidy Code
                <span
                  class="nav__keyboard-shortcut"
                >
                  Ctrl+Shift+F
                </span>
              </li>
              <li>
                Find
                <span
                  class="nav__keyboard-shortcut"
                >
                  Ctrl+F
                </span>
              </li>
              <li>
                Replace
                <span
                  class="nav__keyboard-shortcut"
                >
                  Ctrl+H
                </span>
              </li>
            </ul>
          </li>
          <li
            class="nav__item"
          >
            <span
              role="menuitem"
            >
              Sketch
            </span>
            <ul
              aria-label="Sketch menu"
              role="menu"
            >
              <li>
                Add File
                <span
                  class="nav__keyboard-shortcut"
                >
                  Ctrl+Alt+N
                </span>
              </li>
              <li>
                Add Folder
              </li>
              <li>
                Run
                <span
                  class="nav__keyboard-shortcut"
                >
                  Ctrl+Enter
                </span>
              </li>
              <li>
                Stop
                <span
                  class="nav__keyboard-shortcut"
                >
                  Shift+Ctrl+Enter
                </span>
              </li>
            </ul>
          </li>
          <li
            class="nav__item"
          >
            <span
              role="menuitem"
            >
              Help
            </span>
            <ul
              aria-label="Help menu"
              role="menu"
            >
              <li>
                Keyboard Shortcuts
              </li>
              <li>
                Reference
              </li>
              <li>
                About
              </li>
            </ul>
          </li>
        </ul>
      </ul>
    </nav>
  </header>
</DocumentFragment>
`;

exports[`Nav renders editor version for mobile 1`] = `
<DocumentFragment>
  .c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #333;
  cursor: pointer;
  border: none;
  line-height: 1;
}

.c4.c4.c4 svg * {
  fill: #333;
}

.c4.c4.c4:disabled {
  cursor: not-allowed;
}

.c4.c4.c4 > * + * {
  margin-left: 0.6666666666666666rem;
}

.c5 {
  width: 4rem;
}

.c5 > svg {
  width: 100%;
  height: 100%;
}

.c0 {
  background: #F0F0F0;
  color: #333;
  padding: 0.6666666666666666rem 0;
  gap: 1.1666666666666667rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.8333333333333334rem;
  box-shadow: #00000030 0px 2px 8px 0px;
  z-index: 10;
}

.c1 {
  width: 2.3333333333333335rem;
  aspect-ratio: 1;
  margin-left: 1.1666666666666667rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > svg {
  width: 100%;
  height: 100%;
}

.c1 > svg > path {
  fill: #ed225d;
  stroke: #ed225d;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.16666666666666666rem;
}

.c2 * {
  padding: 0;
  margin: 0;
}

.c2 > h5 {
  font-size: 1.0833333333333333rem;
  font-weight: normal;
}

.c3 {
  margin-left: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 ul.opened {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
  max-width: 90vw;
  max-height: 90vh;
  overflow-y: auto;
}

.c3 > div {
  position: relative;
}

.c3 > div ul {
  foreground: #000;
  background: #F0F0F0;
  border: #A6A6A6;
  position: absolute;
  overflow: hidden;
  z-index: 10;
  right: 10px;
  -webkit-transform: translateX(0.5rem);
  -ms-transform: translateX(0.5rem);
  transform: translateX(0.5rem);
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0;
  -webkit-transform-origin: top;
  -ms-transform-origin: top;
  transform-origin: top;
  -webkit-transition: opacity 100ms,-webkit-transform 100ms 200ms;
  -webkit-transition: opacity 100ms,transform 100ms 200ms;
  transition: opacity 100ms,transform 100ms 200ms;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.16666666666666666rem;
  box-shadow: rgba(60,64,67,0.3) 0px 1px 2px 0px,rgba(60,64,67,0.15) 0px 1px 3px 1px;
  min-width: 10rem;
  border-radius: 0.16666666666666666rem;
}

.c3 > div ul li.user {
  color: #2D67F6;
  font-size: 1.3333333333333333rem;
  font-weight: bold;
  margin: 0.5rem 1rem;
}

.c3 > div ul > b {
  margin: 0.5rem 1rem;
  position: relative;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.c3 > div ul > b::after {
  content: '';
  position: absolute;
  opacity: calc(0.5);
  top: 50%;
  -webkit-transform: translate(100%,-50%);
  -ms-transform: translate(100%,-50%);
  transform: translate(100%,-50%);
  right: -0.5rem;
  width: 4.583333333333333rem;
  height: 1px;
  background-color: #4D4D4D;
}

.c3 > div ul > li {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c3 > div ul > li a,
.c3 > div ul > li button {
  width: 100%;
  padding: 0.6666666666666666rem 1.25rem 0.6666666666666666rem 0.8333333333333334rem;
  font-size: 1.5rem;
  text-align: left;
}

.c3 > div ul > li a:hover,
.c3 > div ul > li button:hover {
  background-color: #ed225d;
  color: #FFF;
}

<ul
    class="c0"
    role="menubar"
  >
    <div
      class="c1"
    >
      <test-file-stub />
    </div>
    <div
      class="c2"
    >
      <h1>
        <span
          class="editable-input editable-input--is-not-editing editable-input--has-value "
        >
          <button
            aria-hidden="false"
            aria-label="Edit sketch name"
            class="editable-input__label"
          >
            <span>
              Test project name
            </span>
            <test-file-stub
              aria-hidden="true"
              classname="editable-input__icon"
              focusable="false"
            />
          </button>
          <input
            aria-hidden="true"
            aria-label="New sketch name"
            class="editable-input__input"
            disabled=""
            maxlength="128"
            type="text"
            value="Test project name"
          />
        </span>
      </h1>
    </div>
    <div
      class="c3"
    >
      <div>
        <a
          href="/login"
        >
          <button
            class="c4 c5"
            display="inline"
            focusable="false"
            kind="primary"
            type="button"
          >
            <test-file-stub
              aria-hidden="true"
              classname="icons__StyledIcon-sc-xmer15-0 dStXqm"
              focusable="false"
            />
          </button>
        </a>
      </div>
      <div>
        <button
          class="c4 c5"
          display="inline"
          focusable="false"
          kind="primary"
          type="button"
        >
          <test-file-stub
            aria-hidden="true"
            classname="icons__StyledIcon-sc-xmer15-0 dStXqm"
            focusable="false"
          />
        </button>
        <ul
          class=""
        >
          <b>
            File
          </b>
          <li>
            <button
              aria-disabled="false"
            >
              New
            </button>
          </li>
          <li>
            <button
              aria-disabled="false"
            >
              Save
            </button>
          </li>
          <li>
            <a
              aria-disabled="false"
              href="/p5/sketches"
            >
              Examples
            </a>
          </li>
          <b>
            Edit
          </b>
          <li>
            <button
              aria-disabled="false"
            >
              Tidy Code
            </button>
          </li>
          <li>
            <button
              aria-disabled="false"
            >
              Find
            </button>
          </li>
          <b>
            Sketch
          </b>
          <li>
            <button
              aria-disabled="false"
            >
              Add File
            </button>
          </li>
          <li>
            <button
              aria-disabled="false"
            >
              Add Folder
            </button>
          </li>
          <b>
            Settings
          </b>
          <li>
            <button
              aria-disabled="false"
            >
              Preferences
            </button>
          </li>
          <li>
            <button
              aria-disabled="false"
            >
              Language
            </button>
          </li>
          <b>
            Help
          </b>
          <li>
            <button
              aria-disabled="false"
            >
              Keyboard Shortcuts
            </button>
          </li>
          <li>
            <a
              aria-disabled="false"
              href="https://p5js.org/reference/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Reference
            </a>
          </li>
          <li>
            <a
              aria-disabled="false"
              href="/about"
            >
              About
            </a>
          </li>
        </ul>
      </div>
    </div>
  </ul>
</DocumentFragment>
`;
